#
# Copyright (c) 2012      Los Alamos National Security, LLC.  All rights reserved.
# $COPYRIGHT$
# 
# Additional copyrights may follow
# 
# $HEADER$
#

headers += \
        base/base.h

libmca_urm_la_SOURCES += \
        base/urm_base_close.c \
        base/urm_base_select.c \
        base/urm_base_open.c
